--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,127 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App{
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(3, 3, 48);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main{
+  display: flex;
+  flex-direction: column;
+  height:max-content;
+  width:40%;
+  color: white;
+  align-items: center;
+  justify-content: center;
+}
+.inputs{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  width: 100%;
+}
+.inputs input{
+  width: 100%;
+  height: 35px;
+  outline: none;
+  font-size: large;
+  
+}
+.add{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: red;
+  font-size: x-large;
+  font-weight: bolder;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  margin-left: 10px;
+  height: 35px;
+  width: 40px;
+  cursor: pointer;
+}
+.add:hover{
+  color: rgb(0, 0, 0);
+  background-color: rgb(0, 255, 47);
+  transform: scale(1.1);
+}
+.items{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  
+  
+}
+.items h1{
+  font-size: 20px;
+}
+.eachitm{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: blue;
+  margin-top: 10px;
+  width: 100%;
+  padding:7px;
+  border-radius: 5px;
+}
+.delete{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  background-color: red;
+  cursor: pointer;
+  height: 100%;
+  width: 60%;
+  padding: 5px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.delete:hover{
+  background-color: rgb(128, 0, 0);
+  transform: scale(1.1);
+}
+.delbtn{
+  margin-top: 10px;
+  width: 20%;
+}
+.delbtn button{
+  width: 100%;
+  padding:10px;
+  background-color: rgb(255, 179, 0);
+  border: 1px rgb(255, 179, 0);
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.1ms;
+}
+.delbtn button:hover{
+  transform: scale(1.1);
+}
+.edit{
+  display: flex;
+  width: 20%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 768px) {
+  .main{
+    width: 90%;
+  }
+  .inputs{
+    margin: 3px;
+  }
+  .delbtn{
+    width: 40%;
+  }
 }
