--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: red;
+  color: rgb(0, 0, 0);
   font-size: x-large;
   font-weight: bolder;
   background-color: rgb(255, 255, 255);
