--- a/src/index.css
+++ b/src/index.css
@@ -3,23 +3,25 @@
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-
-.App{
-  height: 100vh;
-  width: 100vw;
+body{
   background-color: rgb(3, 3, 48);
+}
+.App{
+  width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
 }
 .main{
   display: flex;
   flex-direction: column;
-  height:max-content;
   width:40%;
   color: white;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 .inputs{
   display: flex;
@@ -57,9 +59,7 @@
 .items{
   display: flex;
   flex-direction: column;
-  width: 100%;
-  
-  
+  width: 100%;  
 }
 .items h1{
   font-size: 20px;
